Updated to use relative paths.

--- a/Controls.html
+++ b/Controls.html
@@ -8,11 +8,11 @@
    <meta name="keywords"           content="HVAC,UAC,cost,estimator,calculator,bin,analysis,energy,unitary,air,conditioner,pychrometric,economic,savings,charting,sensible,correction,mixed,air,design,cities,states,stages,cycling,degradation" />
    <meta name="robots"             content="noindex, nofollow" />
 
-   <link rel="stylesheet" type="text/css" media="screen" href="/coolrtu-js/shared/styles_base.css" />
-   <link rel="stylesheet" type="text/css" media="screen" href="/coolrtu-js/shared/styles_public-server.css?101" />
-   <link rel="stylesheet" type="text/css" media="screen" href="/coolrtu-js/shared/styles_bmc.css?124" />
+   <link rel="stylesheet" type="text/css" media="screen" href="shared/styles_base.css" />
+   <link rel="stylesheet" type="text/css" media="screen" href="shared/styles_public-server.css?101" />
+   <link rel="stylesheet" type="text/css" media="screen" href="shared/styles_bmc.css?124" />
 
-   <script src="/coolrtu-js/bincalcs/help_viewer.js"></script>
+   <script src="help_viewer.js"></script>
    <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
    <script type="text/javascript">
       google.charts.load('current', {'packages':['corechart']});
