--- a/Help_Controls.html
+++ b/Help_Controls.html
@@ -201,10 +201,10 @@
   
   <p><strong>Discussion:</strong> There are two supporting PDF documents that
   can be downloaded: (1) the description of the <a class="Jump" target="_blank"
-  href="/coolrtu-js/docs/prototype%20buildings%20HVAC%20summaries.pdf">prototype
+  href="docs/prototype%20buildings%20HVAC%20summaries.pdf">prototype
   buildings</a>, see pages 8-13, and (2) a description of the corresponding
   EnergyPlus analysis done to develop the load models (see Appendix A in the <a
-  href="/coolrtu-js/docs/PNNL-24130.pdf" class="Jump" target="_blank">User
+  href="docs/PNNL-24130.pdf" class="Jump" target="_blank">User
   Manual</a>).</p>
   
   <hr>
@@ -255,7 +255,7 @@
   ventilation-slope fraction parameter that specifies how much of the
   first parameter is caused by ventilation. Refer to the help section
   on <a class="Jump" href="#Building_Type">building
-    types</a> for additional information. Appendix A in the <a href="/coolrtu-js/docs/PNNL-24130.pdf"
+    types</a> for additional information. Appendix A in the <a href="docs/PNNL-24130.pdf"
     class="Jump" target="_blank">User
     Manual</a>
   PDF further describes the concepts and analysis behind this
@@ -509,7 +509,7 @@
     (The "auto" mode generally overestimates the interior humidity ratio. This
     assumption tends to overestimate associated latent loads. There is a
     discussion of this assumption in Section A.7 of the
-    <a class="Jump" href="/coolrtu-js/docs/PNNL-24130.pdf" target="_blank">User Manual</a>.)<br>
+    <a class="Jump" href="docs/PNNL-24130.pdf" target="_blank">User Manual</a>.)<br>
     <br>
     Alternatively a "fixed" mode is used if the "auto" feature is
     de-selected. In "fixed" mode, the interior humidity ratio is
@@ -1737,7 +1737,7 @@
     ventilation because it
     has more square footage.The ventilation portion of the load
     is specified for each load model (see Appendix A in the
-    <a class="Jump" target="_blank" href="/coolrtu-js/docs/PNNL-24130.pdf">User
+    <a class="Jump" target="_blank" href="docs/PNNL-24130.pdf">User
       Manual</a>) and is
     also apparent in the "loads-and-hours" bin-calc plots as the difference
     between the "total" and "non-ventilation" lines.
