--- a/quickstart.html
+++ b/quickstart.html
@@ -8,12 +8,12 @@
   <meta name="keywords" content="">
   
   <!-- CSS files that were in globals.inc -->
-  <link rel="stylesheet" type="text/css" media="screen" href="/coolrtu-js/shared/styles_base.css" />
-  <link rel="stylesheet" type="text/css" media="screen" href="/coolrtu-js/shared/styles_public-server.css" />
-  <link rel="stylesheet" type="text/css" media="screen" href="/coolrtu-js/shared/styles_bmc.css?123" />
+  <link rel="stylesheet" type="text/css" media="screen" href="shared/styles_base.css" />
+  <link rel="stylesheet" type="text/css" media="screen" href="shared/styles_public-server.css" />
+  <link rel="stylesheet" type="text/css" media="screen" href="shared/styles_bmc.css?123" />
 
   <!-- Load the header and footer script -->
-  <script src="/coolrtu-js/bincalcs/load_header_footer.js"></script>
+  <script src="load_header_footer.js"></script>
 </head>
 
 <body class="quickstart col2">
@@ -25,7 +25,7 @@
       <div id="main">
 
         <div class="homeLink">
-          <a href="/coolrtu-js/bincalcs/controls.html" target="_blank" title="Open a new bin-method calculator." class="Jump">Open a calculator</a>
+          <a href="Controls.html" target="_blank" title="Open a new bin-method calculator." class="Jump">Open a calculator</a>
         </div>
 
         <h1>Quick Start</h1>
@@ -239,7 +239,7 @@
         code of the calculator's computation engine. These proprietary curves
         and algorithms were provided to PNNL from the manufacturers. There is a
         <a class="Jump"
-        href="/coolrtu-js/bincalcs/methods/CoolingCorrectionCurves_3SpecificUnits.html">methods
+        href="methods/CoolingCorrectionCurves_3SpecificUnits.html">methods
         page</a> which provides background information on these units. Please
         also refer to the help topic for this feature.</p>
         <ul>
@@ -272,7 +272,7 @@
         full-load and part-load performance of an RTU's condenser using tables
         from a manufacturer's performance brochure. Please review the help topic
         for the "Spreadsheet" feature. There is a <a
-        href="/coolrtu-js/bincalcs/methods/CoolingCorrectionCurves_Manufacturer.html"
+        href="methods/CoolingCorrectionCurves_Manufacturer.html"
         class="Jump">methods page</a>
           that provides additional information. The spreadsheet itself has
           additional instructions and annotation inside. Note that spreadsheet
