--- a/downloads.html
+++ b/downloads.html
@@ -8,12 +8,12 @@
     <meta name="keywords" content="">
 
     <!-- CSS files -->
-    <link rel="stylesheet" type="text/css" media="screen" href="/coolrtu-js/shared/styles_base.css" />
-    <link rel="stylesheet" type="text/css" media="screen" href="/coolrtu-js/shared/styles_public-server.css" />
-    <link rel="stylesheet" type="text/css" media="screen" href="/coolrtu-js/shared/styles_bmc.css?123" />
+    <link rel="stylesheet" type="text/css" media="screen" href="shared/styles_base.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="shared/styles_public-server.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="shared/styles_bmc.css?123" />
 
     <!-- Load the header and footer script -->
-    <script src="/coolrtu-js/bincalcs/load_header_footer.js"></script>
+    <script src="load_header_footer.js"></script>
 </head>
 
 <body class="downloads col2">
@@ -37,23 +37,23 @@
                 
                 <ul dir="ltr">
                     <li dir="ltr">
-                        <a href="/coolrtu-js/docs/PNNL-24130.pdf" target="_blank">User Manual</a>
+                        <a href="docs/PNNL-24130.pdf" target="_blank">User Manual</a>
                         (<a href="https://www.pnnl.gov/main/publications/external/technical_reports/PNNL-24130.pdf" target="_blank">PNNL download</a>)
                         <ul dir="ltr">
                             <li dir="ltr">
-                                <a href="/coolrtu-js/docs/prototype%20buildings%20HVAC%20summaries.pdf" target="_blank">Reference
+                                <a href="docs/prototype%20buildings%20HVAC%20summaries.pdf" target="_blank">Reference
                                     Building Models for Standard 90.1-2010</a>
                             </li>
                         </ul>
                     </li>
                     <li dir="ltr">
-                        <a href="/coolrtu-js/docs/PNNL-23239Rev1.pdf" target="_blank">Enhancement Plan</a>
+                        <a href="docs/PNNL-23239Rev1.pdf" target="_blank">Enhancement Plan</a>
                         (<a href="https://www.pnnl.gov/main/publications/external/technical_reports/PNNL-23239Rev1.pdf" target="_blank">PNNL download</a>)
                     </li>
                 </ul>
 
                 <p>The algorithmic basis of this bin-method calculator was originally used in PNNL's prototype screening tool 
-                    (see version 4.4 and earlier in the <a class="Jump" href="/coolrtu-js/bincalcs/RevisionHistory.html">revision history</a>).
+                    (see version 4.4 and earlier in the <a class="Jump" href="RevisionHistory.html">revision history</a>).
                 PNNL's current screening tool, the 
                 <a class="Jump" href="https://rtucc.pnnl.gov/#/" target="_blank">RTUCC</a>, uses a more advanced methodology. It runs full-year hourly building simulations to model
                 RTUs and assess their performance. Analysis and purchasing decisions 
