--- a/methods/CoolingCorrectionCurves.html
+++ b/methods/CoolingCorrectionCurves.html
@@ -8,12 +8,12 @@
   <meta name="keywords" content="">
   
   <!-- CSS files that were in globals.inc -->
-  <link rel="stylesheet" type="text/css" media="screen" href="/coolrtu-js/shared/styles_base.css" />
-  <link rel="stylesheet" type="text/css" media="screen" href="/coolrtu-js/shared/styles_public-server.css" />
-  <link rel="stylesheet" type="text/css" media="screen" href="/coolrtu-js/shared/styles_bmc.css?123" />
+  <link rel="stylesheet" type="text/css" media="screen" href="../shared/styles_base.css" />
+  <link rel="stylesheet" type="text/css" media="screen" href="../shared/styles_public-server.css" />
+  <link rel="stylesheet" type="text/css" media="screen" href="../shared/styles_bmc.css?123" />
 
   <!-- Load the header and footer script -->
-  <script src="/coolrtu-js/bincalcs/load_header_footer.js"></script>
+  <script src="../load_header_footer.js"></script>
 </head>
 
 <body class="links col1">
@@ -22,7 +22,7 @@
     
     <div id="main">
       <div class="homeLink">
-        <a href="/coolrtu-js/bincalcs/controls.html" target="_blank" title="Open a new bin-method calculator." class="Jump">Open a calculator</a>
+        <a href="../Controls.html" target="_blank" title="Open a new bin-method calculator." class="Jump">Open a calculator</a>
       </div>
       
       <p><a href="ExampleLoadData.html">&lt;&lt; Previous</a> | <a href="methods_outline.html">Outline</a> | <a href="CoolingCorrectionCurvesSensible.html">Next &gt;&gt;</a></p>
@@ -61,7 +61,7 @@
       two functions.</p>
 
       <p style="margin-left: 0px;">The <a class="Jump"
-      href="/coolrtu-js/bincalcs/bypass.html">system performance</a> calculation
+      href="../bypass.html">system performance</a> calculation
       page serves to demonstrate the correction methods described on this
       page and the next. The results of corrections to total gross capacity are
       seen in columns with header names "TCap (Gross)."</p>
