--- a/methods/NonVentilationLoad.html
+++ b/methods/NonVentilationLoad.html
@@ -8,12 +8,12 @@
     <meta name="keywords" content="">
 
     <!-- CSS files that were in globals.inc -->
-    <link rel="stylesheet" type="text/css" media="screen" href="/coolrtu-js/shared/styles_base.css" />
-    <link rel="stylesheet" type="text/css" media="screen" href="/coolrtu-js/shared/styles_public-server.css" />
-    <link rel="stylesheet" type="text/css" media="screen" href="/coolrtu-js/shared/styles_bmc.css?123" />
+    <link rel="stylesheet" type="text/css" media="screen" href="../shared/styles_base.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="../shared/styles_public-server.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="../shared/styles_bmc.css?123" />
 
     <!-- Load the header and footer script -->
-    <script src="/coolrtu-js/bincalcs/load_header_footer.js"></script>
+    <script src="../load_header_footer.js"></script>
 </head>
 
 <body class="links col1">
@@ -22,7 +22,7 @@
 
         <div id="main">
             <div class="homeLink">
-                <a href="/coolrtu-js/bincalcs/controls.html" target="_blank" title="Open a new bin-method calculator." class="Jump">Open a calculator</a>
+                <a href="../Controls.html" target="_blank" title="Open a new bin-method calculator." class="Jump">Open a calculator</a>
             </div>
 
             <p><a href="methods_outline.html">&lt;&lt; Previous</a> | <a href="methods_outline.html">Outline</a> | <a href="ExampleLoadData.html">Next &gt;&gt;</a></p>
@@ -94,7 +94,7 @@
                 (low internal gains as with a warehouse). The EnergyPlus load models for each building type can be
                 manually edited to produce custom versions of each model. The analysis used in developing the load
                 models can be reviewed in Appendix A of the <a class="Jump"
-                    href="/coolrtu-js/bincalcs/PNNL-24130_RTUCC_UserManual_2015-4-2_V2.pdf" target="_blank">User
+                    href="../docs/PNNL-24130.pdf" target="_blank">User
                     Manual</a>. There is also related discussion in the help for the "Building Type" feature.
             </p>
             <p>
