--- a/methods/methods_outline.html
+++ b/methods/methods_outline.html
@@ -8,12 +8,12 @@
   <meta name="keywords" content="">
 
   <!-- CSS files that were in globals.inc -->
-  <link rel="stylesheet" type="text/css" media="screen" href="/coolrtu-js/shared/styles_base.css" />
-  <link rel="stylesheet" type="text/css" media="screen" href="/coolrtu-js/shared/styles_public-server.css" />
-  <link rel="stylesheet" type="text/css" media="screen" href="/coolrtu-js/shared/styles_bmc.css?123" />
+  <link rel="stylesheet" type="text/css" media="screen" href="../shared/styles_base.css" />
+  <link rel="stylesheet" type="text/css" media="screen" href="../shared/styles_public-server.css" />
+  <link rel="stylesheet" type="text/css" media="screen" href="../shared/styles_bmc.css?123" />
 
   <!-- Load the header and footer script -->
-  <script src="/coolrtu-js/bincalcs/load_header_footer.js"></script>
+  <script src="../load_header_footer.js"></script>
 </head>
 
 <body class="methods_outline col2">
@@ -24,7 +24,7 @@
     <div id="main">
 
       <div class="homeLink">
-        <a href="/coolrtu-js/bincalcs/controls.html" target="_blank"
+        <a href="../Controls.html" target="_blank"
           title="Open a new bin-method calculator."
           class="Jump">Open a calculator</a>
       </div>
@@ -32,7 +32,7 @@
       <h1>Methods</h1>
       <p>This <a class="Jump" href="NonVentilationLoad.html">series
         of pages</a> describes the engineering methods behind the
-        <a class="Jump" href="/coolrtu-js/bincalcs/controls.html" target="_blank" title="Open a new bin-method calculator.">calculator</a>. 
+        <a class="Jump" href="../Controls.html" target="_blank" title="Open a new bin-method calculator.">calculator</a>. 
         Each page has a short outline followed by discussion.</p>
       <ul>
         <li>Establishing Loads
