--- a/Controls.html
+++ b/Controls.html
@@ -1,4 +1,6 @@
 ﻿<!DOCTYPE html>
+<!-- Licensed under CC BY-NC 4.0 — https://creativecommons.org/licenses/by-nc/4.0/ -->
+<!-- Copyright (c) 2026 Jim Miller. Non-commercial use only. -->
 <html lang="en">
 
 <head>
