--- a/downloads.html
+++ b/downloads.html
@@ -52,12 +52,18 @@
                     </li>
                 </ul>
 
+                <h1>Source Code</h1>
+                <p>The source code for this calculator is available on GitHub:
+                <a class="Jump" href="https://github.com/m-jim-d/bin-method-calcs" target="_blank">github.com/m-jim-d/bin-method-calcs</a>.
+                See the repository's <a class="Jump" href="ARCHITECTURE.md" target="_blank">ARCHITECTURE.md</a> for a description of the
+                module structure and calculation flow.</p>
+
+                <h1>Background</h1>
                 <p>The algorithmic basis of this bin-method calculator was originally used in PNNL's prototype screening tool 
                     (see version 4.4 and earlier in the <a class="Jump" href="RevisionHistory.html">revision history</a>).
                 PNNL's current screening tool, the 
                 <a class="Jump" href="https://rtucc.pnnl.gov/#/" target="_blank">RTUCC</a>, uses a more advanced methodology. It runs full-year hourly building simulations to model
-                RTUs and assess their performance. Analysis and purchasing decisions 
-                should be guided by the RTUCC.</p>
+                RTUs and assess their performance.</p>
                 
             </div>
         </div>
