--- a/RevisionHistory.html
+++ b/RevisionHistory.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>PNNL: RTU Comparison Calculator - Version History</title>
+  <title>RTU Bin-Method Calculator - Version History</title>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <meta name="description" content="">
   <meta name="keywords" content="">
