--- a/methods/EquipmentResponse.html
+++ b/methods/EquipmentResponse.html
@@ -144,7 +144,7 @@
         penalty</span> (negative condenser energy savings). This is because the
         reduced fan speeds make the unit less sensible (more latent because the
         coil is colder) and so there is more condenser runtime needed to satisfy
-        the sensible load. There is some supporting evidence of this in the PNNL
+        the sensible load. There is some supporting evidence of this in
         field assessment data. This is indicated in the field data by overall
         unit savings that are less than the fan savings. However, it is
         important to note that the evaporator-fan energy savings are much larger
