--- a/quickstart.html
+++ b/quickstart.html
@@ -237,7 +237,7 @@
         modes described above, specific performance curves and algorithms are
         used to characterize these three units and are written into the computer
         code of the calculator's computation engine. These proprietary curves
-        and algorithms were provided to PNNL from the manufacturers. There is a
+        and algorithms were provided by the manufacturers. There is a
         <a class="Jump"
         href="methods/CoolingCorrectionCurves_3SpecificUnits.html">methods
         page</a> which provides background information on these units. Please
