--- a/RevisionHistory.html
+++ b/RevisionHistory.html
@@ -44,7 +44,7 @@
       </div>
 
       <h1>Revision History</h1>
-      <h3 style="font-weight: normal;">Version 6.0 (2026)</h3>
+      <h3 style="font-weight: normal;">Version 6.0 (2/20/2026)</h3>
       <ul>
         <li>Ported the calculation engine from server-side ASP/VBScript to
         client-side JavaScript. The calculator now runs entirely in the browser
