--- a/quickstart.html
+++ b/quickstart.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" id="helpScroller">
 
 <head>
   <title>RTU Bin-Method Calculator - Quick Start</title>
