--- a/Controls.html
+++ b/Controls.html
@@ -9,6 +9,7 @@
    <meta name="Author"             content="Jim Miller" />
    <meta name="keywords"           content="HVAC,UAC,cost,estimator,calculator,bin,analysis,energy,unitary,air,conditioner,pychrometric,economic,savings,charting,sensible,correction,mixed,air,design,cities,states,stages,cycling,degradation" />
    <meta name="robots"             content="noindex, nofollow" />
+   <meta name="viewport"           content="width=device-width, initial-scale=1.0" />
 
    <!-- The navigation menu -->
    <link href="sitemap.css?v=20" rel="stylesheet" type="text/css">
